--- a/index.Rmd
+++ b/index.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Deforestation and Development in Indochina"
+title: "Visualizing Deforestation and Development in Indochina"
 author: "Garrett Augustyn"
 ---
 
 # Introduction
-Southeast Asia is amongst the fastest growing regional economies in the world. With booms in manufacturing, energy, tourism, and palm oil production, the region faces rapid growth in development and infrastructure. The region is also host to one of 25 biodiversity hotspots in the world, containing tropical rainforests and expansive wetlands. This study evaluates how expansive and rapid the agent of deforestation is enveloping the region, in wake of rapid development between 2005 and 2015. If a country's economy has experienced a rapid surge between 2005 and 2015, then the rate and magnitude of deforestation will also increase to coincide with economic expansion. The study area will examine historic Indochina; Myanmar, Thailand, Laos, Cambodia, and Vietnam. The area of forest lost in each country is compared with economic indices such as GDP to show the relationship between economic development and the area of forest lost in the region. Deforestation mapping using data from The World Bank and the Sustainable Society Index is used in conjunction with remotely sensed data to visualize the magnitude of forest loss. Based upon the results, international efforts in the promotion of sustainable forestry can be directed appropriately to countries of rapid deforestation. 
+Southeast Asia is amongst the fastest growing regional economies in the world. With booms in manufacturing, energy, tourism, and palm oil production, the region faces rapid growth in development and infrastructure. The region is also host to one of 25 biodiversity hotspots in the world, containing tropical rainforests and expansive wetlands. This study evaluates how expansive and rapid the agent of deforestation is enveloping the region, in wake of rapid development between 2005 and 2015. If a country's economy has experienced a rapid surge between 2005 and 2015, then the rate and magnitude of deforestation will also increase to coincide with economic expansion. The study area will examine historic Indochina; Myanmar, Thailand, Laos, Cambodia, and Vietnam. The area of forest lost in each country is compared with economic indices such as GDP to visualize the relationship between economic development and the area of forest lost in the region. Deforestation mapping using data from The World Bank and the Sustainable Society Index is used to visualize the magnitude of forest loss. Based upon the results, international efforts in the promotion of sustainable forestry can be directed appropriately to countries of rapid deforestation. 
 
 
 
@@ -12,14 +12,14 @@ Southeast Asia is amongst the fastest growing regional economies in the world. W
 
 
 
-
 ```{r, warning=F,message=F} 
 library(dplyr)
 library(ggplot2)
 library(tidyverse)
-
-
-
+library(maptools)
+library(leaflet)
+library(RColorBrewer)
+library(rworldmap)
 
 ```
 
@@ -44,8 +44,12 @@ Forest_Plot<-ggplot(Forest_G,aes(x=Year,y=Forest,group=Country.Name))
 Forest_Plot+
   geom_line(aes(color=factor(Country.Name)))+labs(title="Percent of Forested Area",y="Percent of Area Forested",color="Country")
 
- 
-  
+
+```
+
+```{r}
+
+
 download.file("http://api.worldbank.org/v2/en/indicator/NY.GDP.MKTP.CD?downloadformat=csv",destfile = "data/GDP.zip")
 unzip("data/GDP.zip",exdir = "data")
 GDP<-read.csv("data/API_NY.GDP.MKTP.CD_DS2_en_csv_v2.csv",skip=4)
@@ -62,18 +66,18 @@ GDP_Plot<-ggplot(GDP_G,aes(x=Year,y=GDP,group=Country.Name))
 GDP_Plot+
   geom_line(aes(color=factor(Country.Name)))+labs(title="GDP",y="GDP (US$)",color="Country")
 
-download.file("http://gfw2-data.s3.amazonaws.com/country/umd_country_stats/tree_cover_stats_2016.xlsx",destfile="data/TCover")
 
-readxl::read_xls("data/TCover.xlsx")
 
 TCstats=readxl::read_xlsx("data/TCstats.xlsx","Loss (2001-2016) by Country",skip=1)
 
 
-TCsub=subset(TCstats,select=(c(6:16,91:101,108:118)))                               
+TCsub=subset(TCstats,select=(c(1,6:16,91:101,108:118)))                               
 
 TCFilter=filter(TCsub,TCsub$Country=="Thailand"|TCsub$Country=="Cambodia"|TCsub$Country=="Vietnam"|TCsub$Country=="Myanmar"|TCsub$Country=="Laos")
 
-## Aggregates
+```
+
+```{r}
 Tree10=select(TCFilter,1:12)
 Tree10$totalsum=rowSums(Tree10[,-1])
 
@@ -83,43 +87,65 @@ Tree50$totalsum=rowSums(Tree50[,-1])
 Tree75=select(TCFilter,1,24:34)
 Tree75$totalsum=rowSums(Tree75[,-1])
 
-## World 50 for Comaprison using TCSub
-
-## Spatial Elements, Join create 3 mps
-
-## Interactive nonesense
-
-##Happy days
+W_agg=select(TCsub,1,13:23)
+W_agg$totalsum=rowSums(W_agg[,-1])
 
 
 
+Wjoin=joinCountryData2Map(W_agg,joinCode = "NAME",nameJoinColumn = "Country")
+
+T10Join=joinCountryData2Map(Tree10,joinCode = "NAME",nameJoinColumn = "Country")
+
+T50Join=joinCountryData2Map(Tree50,joinCode = "NAME",nameJoinColumn = "Country")
+
+T75Join=joinCountryData2Map(Tree75,joinCode = "NAME",nameJoinColumn = "Country")
 
 
+```
+
+All maps below are the ten year aggregate forestr loss over ten years (2005-2015) in the region. The data was subdivided into area cover. To get a large sample analysis was run on 10% coverage, 50% coverage, and 75% coverage. The world map was included to compare regional deforestation to global trends.
 
 
+```{r}
+
+max(W_agg$totalsum)
+
+bins <- c(0, 500000, 1000000, 5000000, 10000000, 20000000, Inf)
+pal <- colorBin("Reds", domain = na.omit(Wjoin$totalsum), bins = bins)
+
+Web_MD=leaflet(Wjoin)%>%
+  addProviderTiles(providers$CartoDB.Positron)
+
+TCWebmap=Web_MD%>%
+  addPolygons(fillColor = ~pal(totalsum),
+              fillOpacity = 0.7, 
+              weight=1,
+              color="grey",
+              highlight=highlightOptions(weight=3, 
+              color="#666",bringToFront=TRUE),
+              label=Wjoin$Country)
+
+#frame widget
+                              
+TCWebmap%>%
+  addLegend(pal=pal,(values=~Wjoin$totalsum),title="10 Year Tree Cover Loss",position="bottomright")
 
 
+T10map=mapCountryData(mapToPlot = T10Join,nameColumnToPlot = "totalsum",xlim = c(91,110),ylim = c(4,29),mapTitle = "10 Year Aggregate Forest Loss in Hectares (2005-2015)",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
+
+labelCountries(dF=T10Join,nameCountryColumn = "Country",col="black")
 
 
+T50map=mapCountryData(mapToPlot = T50Join,nameColumnToPlot = "totalsum",xlim = c(91,110),ylim = c(4,29),mapTitle = "10 Year Aggregate Forest Loss in Hectares (2005-2015)",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
 
-  
+labelCountries(dF=T50Join,nameCountryColumn = "Country",col="black")
 
+mapCountryData(mapToPlot = T75Join,nameColumnToPlot = "totalsum",xlim = c(91,110),ylim = c(4,29),mapTitle = "10 Year Aggregate Forest Loss in Hectares (2005-2015)",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
 
-  
-
-
-#do the seperate selectionsand define, mutate, then after have all of them cbind to make one table
-# Aggregate Loss over 10 year 3 maps
-# getdata world=getdata("countries")
-# maptools data("wrld_simpl")
-#sf package and ISO3 
-#cbind and select statements
-
-geojson <- readLines("json/countries.geojson", warn = FALSE)%>%
-  paste(collapse = "\n") %>%
-  fromJSON(simplifyVector = FALSE)
+labelCountries(dF=T75Join,nameCountryColumn = "Country",col="black")
 
 
+ 
 ```
 
 
