--- a/index.Rmd
+++ b/index.Rmd
@@ -8,9 +8,9 @@ Southeast Asia is amongst the fastest growing regional economies in the world. W
 
 
 
-# Methods
+# Methods 
 
-
+Evaluating forest loss involves the inclusion of a multitude of variables. One must consider that forest loss is a function of natural causes such as forest fires, landslides, disease and many others. The difficulty lies in identifying the exact extent to which anthropogenic stressors lead to tree loss. This is evident in clear cutting, tree harvesting and erossive agricultural behavior. In many cases certain regions of a country gain significant amount of forested land, which makes it difficult to calculate a "budget" for individual countries.  Data visualization was processed with these complex systems in mind.
 
 ```{r, warning=F,message=F} 
 library(dplyr)
@@ -24,7 +24,7 @@ library(rworldmap)
 ```
 
 # Results
-
+Gross Domestic Product (GDP) is displayed as an economic development indicator as Percent of Total Land Forested was selected to evaluate trends in forest biomass in the region. No correlations are calculated, however yearly values can be interpreted from the plots. Both of these variables are found in data that is drawn from the World Bank Group. The package tidyverse is used to manipulate the data, as ggplot2 is used to display the following graphs.
 ```{r}
 
 download.file("http://api.worldbank.org/v2/en/indicator/AG.LND.FRST.ZS?downloadformat=csv",destfile = "data/forest.zip")
@@ -44,12 +44,6 @@ Forest_Plot<-ggplot(Forest_G,aes(x=Year,y=Forest,group=Country.Name))
 Forest_Plot+
   geom_line(aes(color=factor(Country.Name)))+labs(title="Percent of Forested Area",y="Percent of Area Forested",color="Country")
 
-
-```
-
-```{r}
-
-
 download.file("http://api.worldbank.org/v2/en/indicator/NY.GDP.MKTP.CD?downloadformat=csv",destfile = "data/GDP.zip")
 unzip("data/GDP.zip",exdir = "data")
 GDP<-read.csv("data/API_NY.GDP.MKTP.CD_DS2_en_csv_v2.csv",skip=4)
@@ -67,6 +61,11 @@ GDP_Plot+
   geom_line(aes(color=factor(Country.Name)))+labs(title="GDP",y="GDP (US$)",color="Country")
 
 
+```
+ All maps below display the forest cover lost in 2005, 2010, and 2015 to evaluate and visulize regional trends over the decade. Due to variation is research methodology a "net" tree loss cannot be calculated by comparing tree loss and tree gain (Hansen et.al.). The aggregate loss is the sum of the ten year period of tree cover loss in hectares. This data comes with high variability as certain countries The data was subdivided into forest area cover. To get a large sample, analysis was run on 10% canopy density, 50% canopy density, and 75% canopy density. Tree cover canopy density (TCC) is defined as a remotley sensed pixel that was covered by tree canopy in the year 2000 (Hansen et al). The tree cover data originates from the Global Forest Watch.
+
+
+```{r}
 
 TCstats=readxl::read_xlsx("data/TCstats.xlsx","Loss (2001-2016) by Country",skip=1)
 
@@ -75,9 +74,8 @@ TCsub=subset(TCstats,select=(c(1,6:16,91:101,108:118)))
 
 TCFilter=filter(TCsub,TCsub$Country=="Thailand"|TCsub$Country=="Cambodia"|TCsub$Country=="Vietnam"|TCsub$Country=="Myanmar"|TCsub$Country=="Laos")
 
-```
 
-```{r}
+
 Tree10=select(TCFilter,1:12)
 Tree10$totalsum=rowSums(Tree10[,-1])
 
@@ -103,12 +101,11 @@ T75Join=joinCountryData2Map(Tree75,joinCode = "NAME",nameJoinColumn = "Country")
 
 ```
 
-All maps below are the ten year aggregate forestr loss over ten years (2005-2015) in the region. The data was subdivided into area cover. To get a large sample analysis was run on 10% coverage, 50% coverage, and 75% coverage. The world map was included to compare regional deforestation to global trends.
+The values of the global scale 10 year aggregate values are difficult to display due to such a wide range of values. The classifications are designed to best visualize the ranges of deforestation globally. Aggregate forest loss is displayed at 50% tree cover canopy density, the suggested global value according to the Global Forest Watch.
 
 
 ```{r}
 
-max(W_agg$totalsum)
 
 bins <- c(0, 500000, 1000000, 5000000, 10000000, 20000000, Inf)
 pal <- colorBin("Reds", domain = na.omit(Wjoin$totalsum), bins = bins)
@@ -125,22 +122,53 @@ TCWebmap=Web_MD%>%
               color="#666",bringToFront=TRUE),
               label=Wjoin$Country)
 
-#frame widget
                               
 TCWebmap%>%
-  addLegend(pal=pal,(values=~Wjoin$totalsum),title="10 Year Tree Cover Loss",position="bottomright")
+  addLegend(pal=pal,(values=~Wjoin$totalsum),title="10 Year Tree Cover Loss (Ha)",position="bottomright")
+```
+# Forest Loss in Hectares (2005-2015)
+The forest loss in the years of 2005, 2010, and 2015 are used as samples to display trends in country to country comparison. Each year is displayed with 10% canopy density, 50% canopy density, and 75% canopy density to encompass the wide range in forest cover evaluation. 
 
+```{r}
 
-T10map=mapCountryData(mapToPlot = T10Join,nameColumnToPlot = "totalsum",xlim = c(91,110),ylim = c(4,29),mapTitle = "10 Year Aggregate Forest Loss in Hectares (2005-2015)",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
+mapCountryData(mapToPlot = T10Join,nameColumnToPlot = "2005",xlim = c(91,110),ylim = c(4,29),mapTitle = "10% Tree Cover Canopy Density 2005",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
+
+labelCountries(dF=T10Join,nameCountryColumn = "Country",col="black")
+
+mapCountryData(mapToPlot = T10Join,nameColumnToPlot = "2010",xlim = c(91,110),ylim = c(4,29),mapTitle = "10% Tree Cover Canopy Density 2010",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
 
 labelCountries(dF=T10Join,nameCountryColumn = "Country",col="black")
 
 
-T50map=mapCountryData(mapToPlot = T50Join,nameColumnToPlot = "totalsum",xlim = c(91,110),ylim = c(4,29),mapTitle = "10 Year Aggregate Forest Loss in Hectares (2005-2015)",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
+mapCountryData(mapToPlot = T10Join,nameColumnToPlot = "2015",xlim = c(91,110),ylim = c(4,29),mapTitle = "10% Tree Cover Canopy Density 2015",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
+
+labelCountries(dF=T10Join,nameCountryColumn = "Country",col="black")
+
+
+T50map=mapCountryData(mapToPlot = T50Join,nameColumnToPlot = "2005__5",xlim = c(91,110),ylim = c(4,29),mapTitle = "50% Tree Cover Canopy Density 2005",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
 
 labelCountries(dF=T50Join,nameCountryColumn = "Country",col="black")
 
-mapCountryData(mapToPlot = T75Join,nameColumnToPlot = "totalsum",xlim = c(91,110),ylim = c(4,29),mapTitle = "10 Year Aggregate Forest Loss in Hectares (2005-2015)",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
+T50map=mapCountryData(mapToPlot = T50Join,nameColumnToPlot = "2010__5",xlim = c(91,110),ylim = c(4,29),mapTitle = "50% Tree Cover Canopy Density 2010",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
+
+labelCountries(dF=T50Join,nameCountryColumn = "Country",col="black")
+
+T50map=mapCountryData(mapToPlot = T50Join,nameColumnToPlot = "2015__5",xlim = c(91,110),ylim = c(4,29),mapTitle = "50% Tree Cover Canopy Density 2015",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
+
+labelCountries(dF=T50Join,nameCountryColumn = "Country",col="black")
+
+
+
+mapCountryData(mapToPlot = T75Join,nameColumnToPlot = "2005__6",xlim = c(91,110),ylim = c(4,29),mapTitle = "75% Tree Cover Canopy Density 2005",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
+
+labelCountries(dF=T75Join,nameCountryColumn = "Country",col="black")
+
+
+mapCountryData(mapToPlot = T75Join,nameColumnToPlot = "2010__6",xlim = c(91,110),ylim = c(4,29),mapTitle = "75% Tree Cover Canopy Density 2010",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
+
+labelCountries(dF=T75Join,nameCountryColumn = "Country",col="black")
+
+mapCountryData(mapToPlot = T75Join,nameColumnToPlot = "2015__6",xlim = c(91,110),ylim = c(4,29),mapTitle = "75% Tree Cover Canopy Density 2015",oceanCol = "lightblue",missingCountryCol = "white",borderCol = "black",colourPalette = c("green","yellow","orange","red"))
 
 labelCountries(dF=T75Join,nameCountryColumn = "Country",col="black")
 
@@ -148,7 +176,20 @@ labelCountries(dF=T75Join,nameCountryColumn = "Country",col="black")
  
 ```
 
+#Results
+As expected, the results are variable. According to the graphs only Cmbodia and Myanmar are decreasing in total forested area. Thailand remains fairly consistent in forested area, as Vietnam and Laos are experiencing increases in forested area. Myanmar is the only country in the region witnessing both gain in GDP, and loss in forested area. According to the graphs, Vietnam is gaining in both GDP and forested area. 
 
+The region of Indochina is experiencing a moderate trend in decadal aggregate forest loss in comparison with the rest of the globe. Due to the incredible range of the global data, regional comparison is essential. From 10% forest canopy coverage through 75% forest canopy coverage, there are dynamic trends over the ten year period. Thailand remains at a low rate of deforestation throughout the decade. Cambodia has a high variability in year to year forest loss, as Myanmar sees a sharp increase, followed by a mellowed decrease. Laos experiences as steady increase in tree cover loss as Vietnam maintains a steady decrease in the decade. Some of these results are incongrous to the graphs produced from data derived from the World Bank. Forest loss is not the same indicator as percent of land area forest, however they are related in nature.
+
+The results of the study are inconclusive as each countriy varies widely in year to year forest cover trends. Based on the study is uncertain the degree of influence in which economic development has on forest cover trends. 
+
+
+
+
+#References
+Hansen, M. C., P. V. Potapov, R. Moore, M. Hancher, S. A. Turubanova, A. Tyukavina, D. Thau, S. V. Stehman, S. J. Goetz, T. R. Loveland, A. Kommareddy, A. Egorov, L. Chini, C. O. Justice, and J. R. G. Townshend. 2013. “High-Resolution Global Maps of 21st-Century Forest Cover Change.” Science 342 (15 November): 850–53. Data available on-line from: http://earthenginepartners.appspot.com/science-2013-global-forest. 
+
+World Bank, World Development Indicators (2016). GDP/Forest Area (% of land area)
 
 
 
